Archive2/08/8ab00efec19b73/output
main.cpp:24:6: error: use of undeclared identifier 'error'
     error();
     ^
1 error generated.
